fuzz/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> externs funcs
Rule 2     externs -> <empty>
Rule 3     externs -> extern
Rule 4     externs -> extern externs
Rule 5     funcs -> func
Rule 6     funcs -> func funcs
Rule 7     extern -> EXTERN type globid LPARENTHESE RPARENTHESE SEMICOLON
Rule 8     extern -> EXTERN type globid LPARENTHESE tdecls RPARENTHESE SEMICOLON
Rule 9     func -> DEF type globid LPARENTHESE RPARENTHESE blk
Rule 10    func -> DEF type globid LPARENTHESE vdecls RPARENTHESE blk
Rule 11    blk -> LBRACE RBRACE
Rule 12    blk -> LBRACE stmts RBRACE
Rule 13    stmts -> stmt
Rule 14    stmts -> stmt stmts
Rule 15    stmt -> blk
Rule 16    stmt -> RETURN SEMICOLON
Rule 17    stmt -> RETURN exp SEMICOLON
Rule 18    stmt -> vdecl ASSIGN exp SEMICOLON
Rule 19    stmt -> exp SEMICOLON
Rule 20    stmt -> WHILE LPARENTHESE exp RPARENTHESE stmt
Rule 21    stmt -> IF LPARENTHESE exp RPARENTHESE stmt
Rule 22    stmt -> IF LPARENTHESE exp RPARENTHESE stmt ELSE stmt
Rule 23    stmt -> PRINT exp SEMICOLON
Rule 24    stmt -> PRINT SLIT SEMICOLON
Rule 25    exps -> exp
Rule 26    exps -> exp COMMA exps
Rule 27    exp -> LPARENTHESE exp RPARENTHESE
Rule 28    exp -> binop
Rule 29    exp -> uop
Rule 30    exp -> globid LPARENTHESE exps RPARENTHESE
Rule 31    exp -> VARID
Rule 32    exp -> lit
Rule 33    binop -> arith-ops
Rule 34    binop -> logic-ops
Rule 35    binop -> VARID ASSIGN exp
Rule 36    binop -> LBRACKET type RBRACKET exp
Rule 37    arith-ops -> exp TIMES exp
Rule 38    arith-ops -> exp DIVIDE exp
Rule 39    arith-ops -> exp PLUS exp
Rule 40    arith-ops -> exp MINUS exp
Rule 41    logic-ops -> exp EQUAL exp
Rule 42    logic-ops -> exp SMALLERTHAN exp
Rule 43    logic-ops -> exp GREATERTHAN exp
Rule 44    logic-ops -> exp AND exp
Rule 45    logic-ops -> exp OR exp
Rule 46    uop -> NEGATE exp
Rule 47    uop -> MINUS exp
Rule 48    lit -> true
Rule 49    lit -> false
Rule 50    lit -> FNUMBER
Rule 51    lit -> NUMBER
Rule 52    true -> TRUE
Rule 53    false -> FALSE
Rule 54    globid -> IDENT
Rule 55    type -> INT
Rule 56    type -> CINT
Rule 57    type -> FLOAT
Rule 58    type -> BOOL
Rule 59    type -> VOID
Rule 60    type -> REF type
Rule 61    type -> NOALIAS REF type
Rule 62    vdecls -> vdecl COMMA vdecls
Rule 63    vdecls -> vdecl
Rule 64    tdecls -> type
Rule 65    tdecls -> type COMMA tdecls
Rule 66    vdecl -> type VARID

Terminals, with rules where they appear

AND                  : 44
ASSIGN               : 18 35
BOOL                 : 58
CINT                 : 56
COMMA                : 26 62 65
DEF                  : 9 10
DIVIDE               : 38
ELSE                 : 22
EQUAL                : 41
EXTERN               : 7 8
FALSE                : 53
FLOAT                : 57
FNUMBER              : 50
GREATERTHAN          : 43
IDENT                : 54
IF                   : 21 22
INT                  : 55
LBRACE               : 11 12
LBRACKET             : 36
LPARENTHESE          : 7 8 9 10 20 21 22 27 30
MINUS                : 40 47
NEGATE               : 46
NOALIAS              : 61
NUMBER               : 51
OR                   : 45
PLUS                 : 39
PRINT                : 23 24
RBRACE               : 11 12
RBRACKET             : 36
REF                  : 60 61
RETURN               : 16 17
RPARENTHESE          : 7 8 9 10 20 21 22 27 30
SEMICOLON            : 7 8 16 17 18 19 23 24
SLIT                 : 24
SMALLERTHAN          : 42
TIMES                : 37
TRUE                 : 52
VARID                : 31 35 66
VOID                 : 59
WHILE                : 20
error                : 

Nonterminals, with rules where they appear

arith-ops            : 33
binop                : 28
blk                  : 9 10 15
exp                  : 17 18 19 20 21 22 23 25 26 27 35 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 47
exps                 : 26 30
extern               : 3 4
externs              : 1 4
false                : 49
func                 : 5 6
funcs                : 1 6
globid               : 7 8 9 10 30
lit                  : 32
logic-ops            : 34
prog                 : 0
stmt                 : 13 14 20 21 22 22
stmts                : 12 14
tdecls               : 8 65
true                 : 48
type                 : 7 8 9 10 36 60 61 64 65 66
uop                  : 29
vdecl                : 18 62 63
vdecls               : 10 62

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . externs funcs
    (2) externs -> .
    (3) externs -> . extern
    (4) externs -> . extern externs
    (7) extern -> . EXTERN type globid LPARENTHESE RPARENTHESE SEMICOLON
    (8) extern -> . EXTERN type globid LPARENTHESE tdecls RPARENTHESE SEMICOLON

    DEF             reduce using rule 2 (externs -> .)
    EXTERN          shift and go to state 4

    prog                           shift and go to state 1
    externs                        shift and go to state 2
    extern                         shift and go to state 3

state 1

    (0) S' -> prog .



state 2

    (1) prog -> externs . funcs
    (5) funcs -> . func
    (6) funcs -> . func funcs
    (9) func -> . DEF type globid LPARENTHESE RPARENTHESE blk
    (10) func -> . DEF type globid LPARENTHESE vdecls RPARENTHESE blk

    DEF             shift and go to state 7

    funcs                          shift and go to state 5
    func                           shift and go to state 6

state 3

    (3) externs -> extern .
    (4) externs -> extern . externs
    (2) externs -> .
    (3) externs -> . extern
    (4) externs -> . extern externs
    (7) extern -> . EXTERN type globid LPARENTHESE RPARENTHESE SEMICOLON
    (8) extern -> . EXTERN type globid LPARENTHESE tdecls RPARENTHESE SEMICOLON

  ! reduce/reduce conflict for DEF resolved using rule 2 (externs -> .)
    DEF             reduce using rule 2 (externs -> .)
    EXTERN          shift and go to state 4

  ! DEF             [ reduce using rule 3 (externs -> extern .) ]

    extern                         shift and go to state 3
    externs                        shift and go to state 8

state 4

    (7) extern -> EXTERN . type globid LPARENTHESE RPARENTHESE SEMICOLON
    (8) extern -> EXTERN . type globid LPARENTHESE tdecls RPARENTHESE SEMICOLON
    (55) type -> . INT
    (56) type -> . CINT
    (57) type -> . FLOAT
    (58) type -> . BOOL
    (59) type -> . VOID
    (60) type -> . REF type
    (61) type -> . NOALIAS REF type

    INT             shift and go to state 10
    CINT            shift and go to state 11
    FLOAT           shift and go to state 12
    BOOL            shift and go to state 13
    VOID            shift and go to state 14
    REF             shift and go to state 15
    NOALIAS         shift and go to state 16

    type                           shift and go to state 9

state 5

    (1) prog -> externs funcs .

    $end            reduce using rule 1 (prog -> externs funcs .)


state 6

    (5) funcs -> func .
    (6) funcs -> func . funcs
    (5) funcs -> . func
    (6) funcs -> . func funcs
    (9) func -> . DEF type globid LPARENTHESE RPARENTHESE blk
    (10) func -> . DEF type globid LPARENTHESE vdecls RPARENTHESE blk

    $end            reduce using rule 5 (funcs -> func .)
    DEF             shift and go to state 7

    func                           shift and go to state 6
    funcs                          shift and go to state 17

state 7

    (9) func -> DEF . type globid LPARENTHESE RPARENTHESE blk
    (10) func -> DEF . type globid LPARENTHESE vdecls RPARENTHESE blk
    (55) type -> . INT
    (56) type -> . CINT
    (57) type -> . FLOAT
    (58) type -> . BOOL
    (59) type -> . VOID
    (60) type -> . REF type
    (61) type -> . NOALIAS REF type

    INT             shift and go to state 10
    CINT            shift and go to state 11
    FLOAT           shift and go to state 12
    BOOL            shift and go to state 13
    VOID            shift and go to state 14
    REF             shift and go to state 15
    NOALIAS         shift and go to state 16

    type                           shift and go to state 18

state 8

    (4) externs -> extern externs .

    DEF             reduce using rule 4 (externs -> extern externs .)


state 9

    (7) extern -> EXTERN type . globid LPARENTHESE RPARENTHESE SEMICOLON
    (8) extern -> EXTERN type . globid LPARENTHESE tdecls RPARENTHESE SEMICOLON
    (54) globid -> . IDENT

    IDENT           shift and go to state 20

    globid                         shift and go to state 19

state 10

    (55) type -> INT .

    IDENT           reduce using rule 55 (type -> INT .)
    COMMA           reduce using rule 55 (type -> INT .)
    RPARENTHESE     reduce using rule 55 (type -> INT .)
    VARID           reduce using rule 55 (type -> INT .)
    RBRACKET        reduce using rule 55 (type -> INT .)


state 11

    (56) type -> CINT .

    IDENT           reduce using rule 56 (type -> CINT .)
    COMMA           reduce using rule 56 (type -> CINT .)
    RPARENTHESE     reduce using rule 56 (type -> CINT .)
    VARID           reduce using rule 56 (type -> CINT .)
    RBRACKET        reduce using rule 56 (type -> CINT .)


state 12

    (57) type -> FLOAT .

    IDENT           reduce using rule 57 (type -> FLOAT .)
    COMMA           reduce using rule 57 (type -> FLOAT .)
    RPARENTHESE     reduce using rule 57 (type -> FLOAT .)
    VARID           reduce using rule 57 (type -> FLOAT .)
    RBRACKET        reduce using rule 57 (type -> FLOAT .)


state 13

    (58) type -> BOOL .

    IDENT           reduce using rule 58 (type -> BOOL .)
    COMMA           reduce using rule 58 (type -> BOOL .)
    RPARENTHESE     reduce using rule 58 (type -> BOOL .)
    VARID           reduce using rule 58 (type -> BOOL .)
    RBRACKET        reduce using rule 58 (type -> BOOL .)


state 14

    (59) type -> VOID .

    IDENT           reduce using rule 59 (type -> VOID .)
    COMMA           reduce using rule 59 (type -> VOID .)
    RPARENTHESE     reduce using rule 59 (type -> VOID .)
    VARID           reduce using rule 59 (type -> VOID .)
    RBRACKET        reduce using rule 59 (type -> VOID .)


state 15

    (60) type -> REF . type
    (55) type -> . INT
    (56) type -> . CINT
    (57) type -> . FLOAT
    (58) type -> . BOOL
    (59) type -> . VOID
    (60) type -> . REF type
    (61) type -> . NOALIAS REF type

    INT             shift and go to state 10
    CINT            shift and go to state 11
    FLOAT           shift and go to state 12
    BOOL            shift and go to state 13
    VOID            shift and go to state 14
    REF             shift and go to state 15
    NOALIAS         shift and go to state 16

    type                           shift and go to state 21

state 16

    (61) type -> NOALIAS . REF type

    REF             shift and go to state 22


state 17

    (6) funcs -> func funcs .

    $end            reduce using rule 6 (funcs -> func funcs .)


state 18

    (9) func -> DEF type . globid LPARENTHESE RPARENTHESE blk
    (10) func -> DEF type . globid LPARENTHESE vdecls RPARENTHESE blk
    (54) globid -> . IDENT

    IDENT           shift and go to state 20

    globid                         shift and go to state 23

state 19

    (7) extern -> EXTERN type globid . LPARENTHESE RPARENTHESE SEMICOLON
    (8) extern -> EXTERN type globid . LPARENTHESE tdecls RPARENTHESE SEMICOLON

    LPARENTHESE     shift and go to state 24


state 20

    (54) globid -> IDENT .

    LPARENTHESE     reduce using rule 54 (globid -> IDENT .)


state 21

    (60) type -> REF type .

    IDENT           reduce using rule 60 (type -> REF type .)
    COMMA           reduce using rule 60 (type -> REF type .)
    RPARENTHESE     reduce using rule 60 (type -> REF type .)
    VARID           reduce using rule 60 (type -> REF type .)
    RBRACKET        reduce using rule 60 (type -> REF type .)


state 22

    (61) type -> NOALIAS REF . type
    (55) type -> . INT
    (56) type -> . CINT
    (57) type -> . FLOAT
    (58) type -> . BOOL
    (59) type -> . VOID
    (60) type -> . REF type
    (61) type -> . NOALIAS REF type

    INT             shift and go to state 10
    CINT            shift and go to state 11
    FLOAT           shift and go to state 12
    BOOL            shift and go to state 13
    VOID            shift and go to state 14
    REF             shift and go to state 15
    NOALIAS         shift and go to state 16

    type                           shift and go to state 25

state 23

    (9) func -> DEF type globid . LPARENTHESE RPARENTHESE blk
    (10) func -> DEF type globid . LPARENTHESE vdecls RPARENTHESE blk

    LPARENTHESE     shift and go to state 26


state 24

    (7) extern -> EXTERN type globid LPARENTHESE . RPARENTHESE SEMICOLON
    (8) extern -> EXTERN type globid LPARENTHESE . tdecls RPARENTHESE SEMICOLON
    (64) tdecls -> . type
    (65) tdecls -> . type COMMA tdecls
    (55) type -> . INT
    (56) type -> . CINT
    (57) type -> . FLOAT
    (58) type -> . BOOL
    (59) type -> . VOID
    (60) type -> . REF type
    (61) type -> . NOALIAS REF type

    RPARENTHESE     shift and go to state 28
    INT             shift and go to state 10
    CINT            shift and go to state 11
    FLOAT           shift and go to state 12
    BOOL            shift and go to state 13
    VOID            shift and go to state 14
    REF             shift and go to state 15
    NOALIAS         shift and go to state 16

    type                           shift and go to state 27
    tdecls                         shift and go to state 29

state 25

    (61) type -> NOALIAS REF type .

    IDENT           reduce using rule 61 (type -> NOALIAS REF type .)
    COMMA           reduce using rule 61 (type -> NOALIAS REF type .)
    RPARENTHESE     reduce using rule 61 (type -> NOALIAS REF type .)
    VARID           reduce using rule 61 (type -> NOALIAS REF type .)
    RBRACKET        reduce using rule 61 (type -> NOALIAS REF type .)


state 26

    (9) func -> DEF type globid LPARENTHESE . RPARENTHESE blk
    (10) func -> DEF type globid LPARENTHESE . vdecls RPARENTHESE blk
    (62) vdecls -> . vdecl COMMA vdecls
    (63) vdecls -> . vdecl
    (66) vdecl -> . type VARID
    (55) type -> . INT
    (56) type -> . CINT
    (57) type -> . FLOAT
    (58) type -> . BOOL
    (59) type -> . VOID
    (60) type -> . REF type
    (61) type -> . NOALIAS REF type

    RPARENTHESE     shift and go to state 31
    INT             shift and go to state 10
    CINT            shift and go to state 11
    FLOAT           shift and go to state 12
    BOOL            shift and go to state 13
    VOID            shift and go to state 14
    REF             shift and go to state 15
    NOALIAS         shift and go to state 16

    type                           shift and go to state 30
    vdecls                         shift and go to state 32
    vdecl                          shift and go to state 33

state 27

    (64) tdecls -> type .
    (65) tdecls -> type . COMMA tdecls

    RPARENTHESE     reduce using rule 64 (tdecls -> type .)
    COMMA           shift and go to state 34


state 28

    (7) extern -> EXTERN type globid LPARENTHESE RPARENTHESE . SEMICOLON

    SEMICOLON       shift and go to state 35


state 29

    (8) extern -> EXTERN type globid LPARENTHESE tdecls . RPARENTHESE SEMICOLON

    RPARENTHESE     shift and go to state 36


state 30

    (66) vdecl -> type . VARID

    VARID           shift and go to state 37


state 31

    (9) func -> DEF type globid LPARENTHESE RPARENTHESE . blk
    (11) blk -> . LBRACE RBRACE
    (12) blk -> . LBRACE stmts RBRACE

    LBRACE          shift and go to state 39

    blk                            shift and go to state 38

state 32

    (10) func -> DEF type globid LPARENTHESE vdecls . RPARENTHESE blk

    RPARENTHESE     shift and go to state 40


state 33

    (62) vdecls -> vdecl . COMMA vdecls
    (63) vdecls -> vdecl .

    COMMA           shift and go to state 41
    RPARENTHESE     reduce using rule 63 (vdecls -> vdecl .)


state 34

    (65) tdecls -> type COMMA . tdecls
    (64) tdecls -> . type
    (65) tdecls -> . type COMMA tdecls
    (55) type -> . INT
    (56) type -> . CINT
    (57) type -> . FLOAT
    (58) type -> . BOOL
    (59) type -> . VOID
    (60) type -> . REF type
    (61) type -> . NOALIAS REF type

    INT             shift and go to state 10
    CINT            shift and go to state 11
    FLOAT           shift and go to state 12
    BOOL            shift and go to state 13
    VOID            shift and go to state 14
    REF             shift and go to state 15
    NOALIAS         shift and go to state 16

    type                           shift and go to state 27
    tdecls                         shift and go to state 42

state 35

    (7) extern -> EXTERN type globid LPARENTHESE RPARENTHESE SEMICOLON .

    EXTERN          reduce using rule 7 (extern -> EXTERN type globid LPARENTHESE RPARENTHESE SEMICOLON .)
    DEF             reduce using rule 7 (extern -> EXTERN type globid LPARENTHESE RPARENTHESE SEMICOLON .)


state 36

    (8) extern -> EXTERN type globid LPARENTHESE tdecls RPARENTHESE . SEMICOLON

    SEMICOLON       shift and go to state 43


state 37

    (66) vdecl -> type VARID .

    COMMA           reduce using rule 66 (vdecl -> type VARID .)
    RPARENTHESE     reduce using rule 66 (vdecl -> type VARID .)
    ASSIGN          reduce using rule 66 (vdecl -> type VARID .)


state 38

    (9) func -> DEF type globid LPARENTHESE RPARENTHESE blk .

    DEF             reduce using rule 9 (func -> DEF type globid LPARENTHESE RPARENTHESE blk .)
    $end            reduce using rule 9 (func -> DEF type globid LPARENTHESE RPARENTHESE blk .)


state 39

    (11) blk -> LBRACE . RBRACE
    (12) blk -> LBRACE . stmts RBRACE
    (13) stmts -> . stmt
    (14) stmts -> . stmt stmts
    (15) stmt -> . blk
    (16) stmt -> . RETURN SEMICOLON
    (17) stmt -> . RETURN exp SEMICOLON
    (18) stmt -> . vdecl ASSIGN exp SEMICOLON
    (19) stmt -> . exp SEMICOLON
    (20) stmt -> . WHILE LPARENTHESE exp RPARENTHESE stmt
    (21) stmt -> . IF LPARENTHESE exp RPARENTHESE stmt
    (22) stmt -> . IF LPARENTHESE exp RPARENTHESE stmt ELSE stmt
    (23) stmt -> . PRINT exp SEMICOLON
    (24) stmt -> . PRINT SLIT SEMICOLON
    (11) blk -> . LBRACE RBRACE
    (12) blk -> . LBRACE stmts RBRACE
    (66) vdecl -> . type VARID
    (27) exp -> . LPARENTHESE exp RPARENTHESE
    (28) exp -> . binop
    (29) exp -> . uop
    (30) exp -> . globid LPARENTHESE exps RPARENTHESE
    (31) exp -> . VARID
    (32) exp -> . lit
    (55) type -> . INT
    (56) type -> . CINT
    (57) type -> . FLOAT
    (58) type -> . BOOL
    (59) type -> . VOID
    (60) type -> . REF type
    (61) type -> . NOALIAS REF type
    (33) binop -> . arith-ops
    (34) binop -> . logic-ops
    (35) binop -> . VARID ASSIGN exp
    (36) binop -> . LBRACKET type RBRACKET exp
    (46) uop -> . NEGATE exp
    (47) uop -> . MINUS exp
    (54) globid -> . IDENT
    (48) lit -> . true
    (49) lit -> . false
    (50) lit -> . FNUMBER
    (51) lit -> . NUMBER
    (37) arith-ops -> . exp TIMES exp
    (38) arith-ops -> . exp DIVIDE exp
    (39) arith-ops -> . exp PLUS exp
    (40) arith-ops -> . exp MINUS exp
    (41) logic-ops -> . exp EQUAL exp
    (42) logic-ops -> . exp SMALLERTHAN exp
    (43) logic-ops -> . exp GREATERTHAN exp
    (44) logic-ops -> . exp AND exp
    (45) logic-ops -> . exp OR exp
    (52) true -> . TRUE
    (53) false -> . FALSE

    RBRACE          shift and go to state 44
    RETURN          shift and go to state 48
    WHILE           shift and go to state 51
    IF              shift and go to state 53
    PRINT           shift and go to state 54
    LBRACE          shift and go to state 39
    LPARENTHESE     shift and go to state 52
    VARID           shift and go to state 55
    INT             shift and go to state 10
    CINT            shift and go to state 11
    FLOAT           shift and go to state 12
    BOOL            shift and go to state 13
    VOID            shift and go to state 14
    REF             shift and go to state 15
    NOALIAS         shift and go to state 16
    LBRACKET        shift and go to state 62
    NEGATE          shift and go to state 63
    MINUS           shift and go to state 64
    IDENT           shift and go to state 20
    FNUMBER         shift and go to state 67
    NUMBER          shift and go to state 68
    TRUE            shift and go to state 69
    FALSE           shift and go to state 70

    stmts                          shift and go to state 45
    stmt                           shift and go to state 46
    blk                            shift and go to state 47
    exp                            shift and go to state 49
    vdecl                          shift and go to state 50
    type                           shift and go to state 30
    binop                          shift and go to state 56
    uop                            shift and go to state 57
    globid                         shift and go to state 58
    lit                            shift and go to state 59
    arith-ops                      shift and go to state 60
    logic-ops                      shift and go to state 61
    true                           shift and go to state 65
    false                          shift and go to state 66

state 40

    (10) func -> DEF type globid LPARENTHESE vdecls RPARENTHESE . blk
    (11) blk -> . LBRACE RBRACE
    (12) blk -> . LBRACE stmts RBRACE

    LBRACE          shift and go to state 39

    blk                            shift and go to state 71

state 41

    (62) vdecls -> vdecl COMMA . vdecls
    (62) vdecls -> . vdecl COMMA vdecls
    (63) vdecls -> . vdecl
    (66) vdecl -> . type VARID
    (55) type -> . INT
    (56) type -> . CINT
    (57) type -> . FLOAT
    (58) type -> . BOOL
    (59) type -> . VOID
    (60) type -> . REF type
    (61) type -> . NOALIAS REF type

    INT             shift and go to state 10
    CINT            shift and go to state 11
    FLOAT           shift and go to state 12
    BOOL            shift and go to state 13
    VOID            shift and go to state 14
    REF             shift and go to state 15
    NOALIAS         shift and go to state 16

    vdecl                          shift and go to state 33
    vdecls                         shift and go to state 72
    type                           shift and go to state 30

state 42

    (65) tdecls -> type COMMA tdecls .

    RPARENTHESE     reduce using rule 65 (tdecls -> type COMMA tdecls .)


state 43

    (8) extern -> EXTERN type globid LPARENTHESE tdecls RPARENTHESE SEMICOLON .

    EXTERN          reduce using rule 8 (extern -> EXTERN type globid LPARENTHESE tdecls RPARENTHESE SEMICOLON .)
    DEF             reduce using rule 8 (extern -> EXTERN type globid LPARENTHESE tdecls RPARENTHESE SEMICOLON .)


state 44

    (11) blk -> LBRACE RBRACE .

    DEF             reduce using rule 11 (blk -> LBRACE RBRACE .)
    $end            reduce using rule 11 (blk -> LBRACE RBRACE .)
    RETURN          reduce using rule 11 (blk -> LBRACE RBRACE .)
    WHILE           reduce using rule 11 (blk -> LBRACE RBRACE .)
    IF              reduce using rule 11 (blk -> LBRACE RBRACE .)
    PRINT           reduce using rule 11 (blk -> LBRACE RBRACE .)
    LBRACE          reduce using rule 11 (blk -> LBRACE RBRACE .)
    LPARENTHESE     reduce using rule 11 (blk -> LBRACE RBRACE .)
    VARID           reduce using rule 11 (blk -> LBRACE RBRACE .)
    INT             reduce using rule 11 (blk -> LBRACE RBRACE .)
    CINT            reduce using rule 11 (blk -> LBRACE RBRACE .)
    FLOAT           reduce using rule 11 (blk -> LBRACE RBRACE .)
    BOOL            reduce using rule 11 (blk -> LBRACE RBRACE .)
    VOID            reduce using rule 11 (blk -> LBRACE RBRACE .)
    REF             reduce using rule 11 (blk -> LBRACE RBRACE .)
    NOALIAS         reduce using rule 11 (blk -> LBRACE RBRACE .)
    LBRACKET        reduce using rule 11 (blk -> LBRACE RBRACE .)
    NEGATE          reduce using rule 11 (blk -> LBRACE RBRACE .)
    MINUS           reduce using rule 11 (blk -> LBRACE RBRACE .)
    IDENT           reduce using rule 11 (blk -> LBRACE RBRACE .)
    FNUMBER         reduce using rule 11 (blk -> LBRACE RBRACE .)
    NUMBER          reduce using rule 11 (blk -> LBRACE RBRACE .)
    TRUE            reduce using rule 11 (blk -> LBRACE RBRACE .)
    FALSE           reduce using rule 11 (blk -> LBRACE RBRACE .)
    RBRACE          reduce using rule 11 (blk -> LBRACE RBRACE .)
    ELSE            reduce using rule 11 (blk -> LBRACE RBRACE .)


state 45

    (12) blk -> LBRACE stmts . RBRACE

    RBRACE          shift and go to state 73


state 46

    (13) stmts -> stmt .
    (14) stmts -> stmt . stmts
    (13) stmts -> . stmt
    (14) stmts -> . stmt stmts
    (15) stmt -> . blk
    (16) stmt -> . RETURN SEMICOLON
    (17) stmt -> . RETURN exp SEMICOLON
    (18) stmt -> . vdecl ASSIGN exp SEMICOLON
    (19) stmt -> . exp SEMICOLON
    (20) stmt -> . WHILE LPARENTHESE exp RPARENTHESE stmt
    (21) stmt -> . IF LPARENTHESE exp RPARENTHESE stmt
    (22) stmt -> . IF LPARENTHESE exp RPARENTHESE stmt ELSE stmt
    (23) stmt -> . PRINT exp SEMICOLON
    (24) stmt -> . PRINT SLIT SEMICOLON
    (11) blk -> . LBRACE RBRACE
    (12) blk -> . LBRACE stmts RBRACE
    (66) vdecl -> . type VARID
    (27) exp -> . LPARENTHESE exp RPARENTHESE
    (28) exp -> . binop
    (29) exp -> . uop
    (30) exp -> . globid LPARENTHESE exps RPARENTHESE
    (31) exp -> . VARID
    (32) exp -> . lit
    (55) type -> . INT
    (56) type -> . CINT
    (57) type -> . FLOAT
    (58) type -> . BOOL
    (59) type -> . VOID
    (60) type -> . REF type
    (61) type -> . NOALIAS REF type
    (33) binop -> . arith-ops
    (34) binop -> . logic-ops
    (35) binop -> . VARID ASSIGN exp
    (36) binop -> . LBRACKET type RBRACKET exp
    (46) uop -> . NEGATE exp
    (47) uop -> . MINUS exp
    (54) globid -> . IDENT
    (48) lit -> . true
    (49) lit -> . false
    (50) lit -> . FNUMBER
    (51) lit -> . NUMBER
    (37) arith-ops -> . exp TIMES exp
    (38) arith-ops -> . exp DIVIDE exp
    (39) arith-ops -> . exp PLUS exp
    (40) arith-ops -> . exp MINUS exp
    (41) logic-ops -> . exp EQUAL exp
    (42) logic-ops -> . exp SMALLERTHAN exp
    (43) logic-ops -> . exp GREATERTHAN exp
    (44) logic-ops -> . exp AND exp
    (45) logic-ops -> . exp OR exp
    (52) true -> . TRUE
    (53) false -> . FALSE

    RBRACE          reduce using rule 13 (stmts -> stmt .)
    RETURN          shift and go to state 48
    WHILE           shift and go to state 51
    IF              shift and go to state 53
    PRINT           shift and go to state 54
    LBRACE          shift and go to state 39
    LPARENTHESE     shift and go to state 52
    VARID           shift and go to state 55
    INT             shift and go to state 10
    CINT            shift and go to state 11
    FLOAT           shift and go to state 12
    BOOL            shift and go to state 13
    VOID            shift and go to state 14
    REF             shift and go to state 15
    NOALIAS         shift and go to state 16
    LBRACKET        shift and go to state 62
    NEGATE          shift and go to state 63
    MINUS           shift and go to state 64
    IDENT           shift and go to state 20
    FNUMBER         shift and go to state 67
    NUMBER          shift and go to state 68
    TRUE            shift and go to state 69
    FALSE           shift and go to state 70

    stmt                           shift and go to state 46
    stmts                          shift and go to state 74
    blk                            shift and go to state 47
    exp                            shift and go to state 49
    vdecl                          shift and go to state 50
    type                           shift and go to state 30
    binop                          shift and go to state 56
    uop                            shift and go to state 57
    globid                         shift and go to state 58
    lit                            shift and go to state 59
    arith-ops                      shift and go to state 60
    logic-ops                      shift and go to state 61
    true                           shift and go to state 65
    false                          shift and go to state 66

state 47

    (15) stmt -> blk .

    RETURN          reduce using rule 15 (stmt -> blk .)
    WHILE           reduce using rule 15 (stmt -> blk .)
    IF              reduce using rule 15 (stmt -> blk .)
    PRINT           reduce using rule 15 (stmt -> blk .)
    LBRACE          reduce using rule 15 (stmt -> blk .)
    LPARENTHESE     reduce using rule 15 (stmt -> blk .)
    VARID           reduce using rule 15 (stmt -> blk .)
    INT             reduce using rule 15 (stmt -> blk .)
    CINT            reduce using rule 15 (stmt -> blk .)
    FLOAT           reduce using rule 15 (stmt -> blk .)
    BOOL            reduce using rule 15 (stmt -> blk .)
    VOID            reduce using rule 15 (stmt -> blk .)
    REF             reduce using rule 15 (stmt -> blk .)
    NOALIAS         reduce using rule 15 (stmt -> blk .)
    LBRACKET        reduce using rule 15 (stmt -> blk .)
    NEGATE          reduce using rule 15 (stmt -> blk .)
    MINUS           reduce using rule 15 (stmt -> blk .)
    IDENT           reduce using rule 15 (stmt -> blk .)
    FNUMBER         reduce using rule 15 (stmt -> blk .)
    NUMBER          reduce using rule 15 (stmt -> blk .)
    TRUE            reduce using rule 15 (stmt -> blk .)
    FALSE           reduce using rule 15 (stmt -> blk .)
    RBRACE          reduce using rule 15 (stmt -> blk .)
    ELSE            reduce using rule 15 (stmt -> blk .)


state 48

    (16) stmt -> RETURN . SEMICOLON
    (17) stmt -> RETURN . exp SEMICOLON
    (27) exp -> . LPARENTHESE exp RPARENTHESE
    (28) exp -> . binop
    (29) exp -> . uop
    (30) exp -> . globid LPARENTHESE exps RPARENTHESE
    (31) exp -> . VARID
    (32) exp -> . lit
    (33) binop -> . arith-ops
    (34) binop -> . logic-ops
    (35) binop -> . VARID ASSIGN exp
    (36) binop -> . LBRACKET type RBRACKET exp
    (46) uop -> . NEGATE exp
    (47) uop -> . MINUS exp
    (54) globid -> . IDENT
    (48) lit -> . true
    (49) lit -> . false
    (50) lit -> . FNUMBER
    (51) lit -> . NUMBER
    (37) arith-ops -> . exp TIMES exp
    (38) arith-ops -> . exp DIVIDE exp
    (39) arith-ops -> . exp PLUS exp
    (40) arith-ops -> . exp MINUS exp
    (41) logic-ops -> . exp EQUAL exp
    (42) logic-ops -> . exp SMALLERTHAN exp
    (43) logic-ops -> . exp GREATERTHAN exp
    (44) logic-ops -> . exp AND exp
    (45) logic-ops -> . exp OR exp
    (52) true -> . TRUE
    (53) false -> . FALSE

    SEMICOLON       shift and go to state 75
    LPARENTHESE     shift and go to state 52
    VARID           shift and go to state 55
    LBRACKET        shift and go to state 62
    NEGATE          shift and go to state 63
    MINUS           shift and go to state 64
    IDENT           shift and go to state 20
    FNUMBER         shift and go to state 67
    NUMBER          shift and go to state 68
    TRUE            shift and go to state 69
    FALSE           shift and go to state 70

    exp                            shift and go to state 76
    binop                          shift and go to state 56
    uop                            shift and go to state 57
    globid                         shift and go to state 58
    lit                            shift and go to state 59
    arith-ops                      shift and go to state 60
    logic-ops                      shift and go to state 61
    true                           shift and go to state 65
    false                          shift and go to state 66

state 49

    (19) stmt -> exp . SEMICOLON
    (37) arith-ops -> exp . TIMES exp
    (38) arith-ops -> exp . DIVIDE exp
    (39) arith-ops -> exp . PLUS exp
    (40) arith-ops -> exp . MINUS exp
    (41) logic-ops -> exp . EQUAL exp
    (42) logic-ops -> exp . SMALLERTHAN exp
    (43) logic-ops -> exp . GREATERTHAN exp
    (44) logic-ops -> exp . AND exp
    (45) logic-ops -> exp . OR exp

    SEMICOLON       shift and go to state 77
    TIMES           shift and go to state 78
    DIVIDE          shift and go to state 79
    PLUS            shift and go to state 80
    MINUS           shift and go to state 81
    EQUAL           shift and go to state 82
    SMALLERTHAN     shift and go to state 83
    GREATERTHAN     shift and go to state 84
    AND             shift and go to state 85
    OR              shift and go to state 86


state 50

    (18) stmt -> vdecl . ASSIGN exp SEMICOLON

    ASSIGN          shift and go to state 87


state 51

    (20) stmt -> WHILE . LPARENTHESE exp RPARENTHESE stmt

    LPARENTHESE     shift and go to state 88


state 52
